// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`change option 1`] = `
<div class="ca2-picker ca2-area">
  <div class="ca2-hairline--top-bottom ca2-picker__toolbar"><button type="button" class="ca2-picker__cancel">取消</button><button type="button" class="ca2-picker__confirm">确认</button></div>
  <!---->
  <div class="ca2-picker__columns" style="height: 220px;">
    <div class="ca2-picker-column">
      <ul class="ca2-picker-column__wrapper" style="transform: translate3d(0, 88px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;">
        <li role="button" tabindex="0" class="ca2-ellipsis ca2-picker-column__item ca2-picker-column__item--selected" style="height: 44px;">北京市</li>
        <li role="button" tabindex="0" class="ca2-ellipsis ca2-picker-column__item" style="height: 44px;">天津市</li>
      </ul>
    </div>
    <div class="ca2-picker-column">
      <ul class="ca2-picker-column__wrapper" style="transform: translate3d(0, 88px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;">
        <li role="button" tabindex="0" class="ca2-ellipsis ca2-picker-column__item ca2-picker-column__item--selected" style="height: 44px;">北京市</li>
        <li role="button" tabindex="0" class="ca2-ellipsis ca2-picker-column__item" style="height: 44px;">县</li>
      </ul>
    </div>
    <div class="ca2-picker-column">
      <ul class="ca2-picker-column__wrapper" style="transform: translate3d(0, 88px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;">
        <li role="button" tabindex="0" class="ca2-ellipsis ca2-picker-column__item ca2-picker-column__item--selected" style="height: 44px;">东城区</li>
        <li role="button" tabindex="0" class="ca2-ellipsis ca2-picker-column__item" style="height: 44px;">西城区</li>
      </ul>
    </div>
    <div class="ca2-picker__mask" style="background-size: 100% 88px;"></div>
    <div class="ca2-hairline-unset--top-bottom ca2-picker__frame" style="height: 44px;"></div>
  </div>
  <!---->
</div>
`;

exports[`change option 2`] = `
<div class="ca2-picker ca2-area">
  <div class="ca2-hairline--top-bottom ca2-picker__toolbar"><button type="button" class="ca2-picker__cancel">取消</button><button type="button" class="ca2-picker__confirm">确认</button></div>
  <!---->
  <div class="ca2-picker__columns" style="height: 220px;">
    <div class="ca2-picker-column">
      <ul class="ca2-picker-column__wrapper" style="transform: translate3d(0, 44px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;">
        <li role="button" tabindex="0" class="ca2-ellipsis ca2-picker-column__item" style="height: 44px;">北京市</li>
        <li role="button" tabindex="0" class="ca2-ellipsis ca2-picker-column__item ca2-picker-column__item--selected" style="height: 44px;">天津市</li>
      </ul>
    </div>
    <div class="ca2-picker-column">
      <ul class="ca2-picker-column__wrapper" style="transform: translate3d(0, 88px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;">
        <li role="button" tabindex="0" class="ca2-ellipsis ca2-picker-column__item ca2-picker-column__item--selected" style="height: 44px;">天津市</li>
        <li role="button" tabindex="0" class="ca2-ellipsis ca2-picker-column__item" style="height: 44px;">县</li>
      </ul>
    </div>
    <div class="ca2-picker-column">
      <ul class="ca2-picker-column__wrapper" style="transform: translate3d(0, 88px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;">
        <li role="button" tabindex="0" class="ca2-ellipsis ca2-picker-column__item ca2-picker-column__item--selected" style="height: 44px;">和平区</li>
        <li role="button" tabindex="0" class="ca2-ellipsis ca2-picker-column__item" style="height: 44px;">河东区</li>
      </ul>
    </div>
    <div class="ca2-picker__mask" style="background-size: 100% 88px;"></div>
    <div class="ca2-hairline-unset--top-bottom ca2-picker__frame" style="height: 44px;"></div>
  </div>
  <!---->
</div>
`;

exports[`change option 3`] = `
<div class="ca2-picker ca2-area">
  <div class="ca2-hairline--top-bottom ca2-picker__toolbar"><button type="button" class="ca2-picker__cancel">取消</button><button type="button" class="ca2-picker__confirm">确认</button></div>
  <!---->
  <div class="ca2-picker__columns" style="height: 220px;">
    <div class="ca2-picker-column">
      <ul class="ca2-picker-column__wrapper" style="transform: translate3d(0, 44px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;">
        <li role="button" tabindex="0" class="ca2-ellipsis ca2-picker-column__item" style="height: 44px;">北京市</li>
        <li role="button" tabindex="0" class="ca2-ellipsis ca2-picker-column__item ca2-picker-column__item--selected" style="height: 44px;">天津市</li>
      </ul>
    </div>
    <div class="ca2-picker-column">
      <ul class="ca2-picker-column__wrapper" style="transform: translate3d(0, 88px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;">
        <li role="button" tabindex="0" class="ca2-ellipsis ca2-picker-column__item ca2-picker-column__item--selected" style="height: 44px;">天津市</li>
        <li role="button" tabindex="0" class="ca2-ellipsis ca2-picker-column__item" style="height: 44px;">县</li>
      </ul>
    </div>
    <div class="ca2-picker-column">
      <ul class="ca2-picker-column__wrapper" style="transform: translate3d(0, 44px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;">
        <li role="button" tabindex="0" class="ca2-ellipsis ca2-picker-column__item" style="height: 44px;">和平区</li>
        <li role="button" tabindex="0" class="ca2-ellipsis ca2-picker-column__item ca2-picker-column__item--selected" style="height: 44px;">河东区</li>
      </ul>
    </div>
    <div class="ca2-picker__mask" style="background-size: 100% 88px;"></div>
    <div class="ca2-hairline-unset--top-bottom ca2-picker__frame" style="height: 44px;"></div>
  </div>
  <!---->
</div>
`;

exports[`columns-num prop 1`] = `
<div class="ca2-picker ca2-area">
  <div class="ca2-hairline--top-bottom ca2-picker__toolbar"><button type="button" class="ca2-picker__cancel">取消</button><button type="button" class="ca2-picker__confirm">确认</button></div>
  <!---->
  <div class="ca2-picker__columns" style="height: 220px;">
    <div class="ca2-picker-column">
      <ul class="ca2-picker-column__wrapper" style="transform: translate3d(0, 88px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;">
        <li role="button" tabindex="0" class="ca2-ellipsis ca2-picker-column__item ca2-picker-column__item--selected" style="height: 44px;">北京市</li>
        <li role="button" tabindex="0" class="ca2-ellipsis ca2-picker-column__item" style="height: 44px;">天津市</li>
      </ul>
    </div>
    <div class="ca2-picker-column">
      <ul class="ca2-picker-column__wrapper" style="transform: translate3d(0, 88px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;">
        <li role="button" tabindex="0" class="ca2-ellipsis ca2-picker-column__item ca2-picker-column__item--selected" style="height: 44px;">北京市</li>
        <li role="button" tabindex="0" class="ca2-ellipsis ca2-picker-column__item" style="height: 44px;">县</li>
      </ul>
    </div>
    <div class="ca2-picker__mask" style="background-size: 100% 88px;"></div>
    <div class="ca2-hairline-unset--top-bottom ca2-picker__frame" style="height: 44px;"></div>
  </div>
  <!---->
</div>
`;

exports[`columns-top、columns-bottom slot 1`] = `
<div class="ca2-picker ca2-area">
  <div class="ca2-hairline--top-bottom ca2-picker__toolbar"><button type="button" class="ca2-picker__cancel">取消</button><button type="button" class="ca2-picker__confirm">确认</button></div>
  <!---->Top<div class="ca2-picker__columns" style="height: 220px;">
    <div class="ca2-picker-column">
      <ul class="ca2-picker-column__wrapper" style="transform: translate3d(0, 88px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;"></ul>
    </div>
    <div class="ca2-picker-column">
      <ul class="ca2-picker-column__wrapper" style="transform: translate3d(0, 88px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;"></ul>
    </div>
    <div class="ca2-picker-column">
      <ul class="ca2-picker-column__wrapper" style="transform: translate3d(0, 88px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;"></ul>
    </div>
    <div class="ca2-picker__mask" style="background-size: 100% 88px;"></div>
    <div class="ca2-hairline-unset--top-bottom ca2-picker__frame" style="height: 44px;"></div>
  </div>Bottom
  <!---->
</div>
`;

exports[`reset method 1`] = `
<div class="ca2-picker ca2-area">
  <div class="ca2-hairline--top-bottom ca2-picker__toolbar"><button type="button" class="ca2-picker__cancel">取消</button><button type="button" class="ca2-picker__confirm">确认</button></div>
  <!---->
  <div class="ca2-picker__columns" style="height: 220px;">
    <div class="ca2-picker-column">
      <ul class="ca2-picker-column__wrapper" style="transform: translate3d(0, 44px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;">
        <li role="button" tabindex="0" class="ca2-ellipsis ca2-picker-column__item" style="height: 44px;">北京市</li>
        <li role="button" tabindex="0" class="ca2-ellipsis ca2-picker-column__item ca2-picker-column__item--selected" style="height: 44px;">天津市</li>
      </ul>
    </div>
    <div class="ca2-picker-column">
      <ul class="ca2-picker-column__wrapper" style="transform: translate3d(0, 44px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;">
        <li role="button" tabindex="0" class="ca2-ellipsis ca2-picker-column__item" style="height: 44px;">天津市</li>
        <li role="button" tabindex="0" class="ca2-ellipsis ca2-picker-column__item ca2-picker-column__item--selected" style="height: 44px;">县</li>
      </ul>
    </div>
    <div class="ca2-picker-column">
      <ul class="ca2-picker-column__wrapper" style="transform: translate3d(0, 88px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;">
        <li role="button" tabindex="0" class="ca2-ellipsis ca2-picker-column__item ca2-picker-column__item--selected" style="height: 44px;">蓟县</li>
      </ul>
    </div>
    <div class="ca2-picker__mask" style="background-size: 100% 88px;"></div>
    <div class="ca2-hairline-unset--top-bottom ca2-picker__frame" style="height: 44px;"></div>
  </div>
  <!---->
</div>
`;

exports[`reset method 2`] = `
<div class="ca2-picker ca2-area">
  <div class="ca2-hairline--top-bottom ca2-picker__toolbar"><button type="button" class="ca2-picker__cancel">取消</button><button type="button" class="ca2-picker__confirm">确认</button></div>
  <!---->
  <div class="ca2-picker__columns" style="height: 220px;">
    <div class="ca2-picker-column">
      <ul class="ca2-picker-column__wrapper" style="transform: translate3d(0, 88px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;">
        <li role="button" tabindex="0" class="ca2-ellipsis ca2-picker-column__item ca2-picker-column__item--selected" style="height: 44px;">北京市</li>
        <li role="button" tabindex="0" class="ca2-ellipsis ca2-picker-column__item" style="height: 44px;">天津市</li>
      </ul>
    </div>
    <div class="ca2-picker-column">
      <ul class="ca2-picker-column__wrapper" style="transform: translate3d(0, 88px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;">
        <li role="button" tabindex="0" class="ca2-ellipsis ca2-picker-column__item ca2-picker-column__item--selected" style="height: 44px;">北京市</li>
        <li role="button" tabindex="0" class="ca2-ellipsis ca2-picker-column__item" style="height: 44px;">县</li>
      </ul>
    </div>
    <div class="ca2-picker-column">
      <ul class="ca2-picker-column__wrapper" style="transform: translate3d(0, 88px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;">
        <li role="button" tabindex="0" class="ca2-ellipsis ca2-picker-column__item ca2-picker-column__item--selected" style="height: 44px;">东城区</li>
        <li role="button" tabindex="0" class="ca2-ellipsis ca2-picker-column__item" style="height: 44px;">西城区</li>
      </ul>
    </div>
    <div class="ca2-picker__mask" style="background-size: 100% 88px;"></div>
    <div class="ca2-hairline-unset--top-bottom ca2-picker__frame" style="height: 44px;"></div>
  </div>
  <!---->
</div>
`;

exports[`title slot 1`] = `
<div class="ca2-picker ca2-area">
  <div class="ca2-hairline--top-bottom ca2-picker__toolbar"><button type="button" class="ca2-picker__cancel">取消</button>Custom Title<button type="button" class="ca2-picker__confirm">确认</button></div>
  <!---->
  <div class="ca2-picker__columns" style="height: 220px;">
    <div class="ca2-picker-column">
      <ul class="ca2-picker-column__wrapper" style="transform: translate3d(0, 88px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;"></ul>
    </div>
    <div class="ca2-picker-column">
      <ul class="ca2-picker-column__wrapper" style="transform: translate3d(0, 88px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;"></ul>
    </div>
    <div class="ca2-picker-column">
      <ul class="ca2-picker-column__wrapper" style="transform: translate3d(0, 88px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;"></ul>
    </div>
    <div class="ca2-picker__mask" style="background-size: 100% 88px;"></div>
    <div class="ca2-hairline-unset--top-bottom ca2-picker__frame" style="height: 44px;"></div>
  </div>
  <!---->
</div>
`;

exports[`watch areaList & code 1`] = `
<div class="ca2-picker ca2-area">
  <div class="ca2-hairline--top-bottom ca2-picker__toolbar"><button type="button" class="ca2-picker__cancel">取消</button><button type="button" class="ca2-picker__confirm">确认</button></div>
  <!---->
  <div class="ca2-picker__columns" style="height: 220px;">
    <div class="ca2-picker-column">
      <ul class="ca2-picker-column__wrapper" style="transform: translate3d(0, 88px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;">
        <li role="button" tabindex="0" class="ca2-ellipsis ca2-picker-column__item ca2-picker-column__item--selected" style="height: 44px;">北京市</li>
        <li role="button" tabindex="0" class="ca2-ellipsis ca2-picker-column__item" style="height: 44px;">天津市</li>
      </ul>
    </div>
    <div class="ca2-picker-column">
      <ul class="ca2-picker-column__wrapper" style="transform: translate3d(0, 88px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;">
        <li role="button" tabindex="0" class="ca2-ellipsis ca2-picker-column__item ca2-picker-column__item--selected" style="height: 44px;">北京市</li>
        <li role="button" tabindex="0" class="ca2-ellipsis ca2-picker-column__item" style="height: 44px;">县</li>
      </ul>
    </div>
    <div class="ca2-picker-column">
      <ul class="ca2-picker-column__wrapper" style="transform: translate3d(0, 88px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;">
        <li role="button" tabindex="0" class="ca2-ellipsis ca2-picker-column__item ca2-picker-column__item--selected" style="height: 44px;">东城区</li>
        <li role="button" tabindex="0" class="ca2-ellipsis ca2-picker-column__item" style="height: 44px;">西城区</li>
      </ul>
    </div>
    <div class="ca2-picker__mask" style="background-size: 100% 88px;"></div>
    <div class="ca2-hairline-unset--top-bottom ca2-picker__frame" style="height: 44px;"></div>
  </div>
  <!---->
</div>
`;

exports[`watch areaList & code 2`] = `
<div class="ca2-picker ca2-area">
  <div class="ca2-hairline--top-bottom ca2-picker__toolbar"><button type="button" class="ca2-picker__cancel">取消</button><button type="button" class="ca2-picker__confirm">确认</button></div>
  <!---->
  <div class="ca2-picker__columns" style="height: 220px;">
    <div class="ca2-picker-column">
      <ul class="ca2-picker-column__wrapper" style="transform: translate3d(0, 88px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;">
        <li role="button" tabindex="0" class="ca2-ellipsis ca2-picker-column__item ca2-picker-column__item--selected" style="height: 44px;">北京市</li>
        <li role="button" tabindex="0" class="ca2-ellipsis ca2-picker-column__item" style="height: 44px;">天津市</li>
      </ul>
    </div>
    <div class="ca2-picker-column">
      <ul class="ca2-picker-column__wrapper" style="transform: translate3d(0, 88px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;">
        <li role="button" tabindex="0" class="ca2-ellipsis ca2-picker-column__item ca2-picker-column__item--selected" style="height: 44px;">北京市</li>
        <li role="button" tabindex="0" class="ca2-ellipsis ca2-picker-column__item" style="height: 44px;">县</li>
      </ul>
    </div>
    <div class="ca2-picker-column">
      <ul class="ca2-picker-column__wrapper" style="transform: translate3d(0, 88px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;">
        <li role="button" tabindex="0" class="ca2-ellipsis ca2-picker-column__item ca2-picker-column__item--selected" style="height: 44px;">东城区</li>
        <li role="button" tabindex="0" class="ca2-ellipsis ca2-picker-column__item" style="height: 44px;">西城区</li>
      </ul>
    </div>
    <div class="ca2-picker__mask" style="background-size: 100% 88px;"></div>
    <div class="ca2-hairline-unset--top-bottom ca2-picker__frame" style="height: 44px;"></div>
  </div>
  <!---->
</div>
`;

exports[`watch areaList & code 3`] = `
<div class="ca2-picker ca2-area">
  <div class="ca2-hairline--top-bottom ca2-picker__toolbar"><button type="button" class="ca2-picker__cancel">取消</button><button type="button" class="ca2-picker__confirm">确认</button></div>
  <!---->
  <div class="ca2-picker__columns" style="height: 220px;">
    <div class="ca2-picker-column">
      <ul class="ca2-picker-column__wrapper" style="transform: translate3d(0, 88px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;">
        <li role="button" tabindex="0" class="ca2-ellipsis ca2-picker-column__item ca2-picker-column__item--selected" style="height: 44px;">北京市</li>
        <li role="button" tabindex="0" class="ca2-ellipsis ca2-picker-column__item" style="height: 44px;">天津市</li>
      </ul>
    </div>
    <div class="ca2-picker-column">
      <ul class="ca2-picker-column__wrapper" style="transform: translate3d(0, 88px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;">
        <li role="button" tabindex="0" class="ca2-ellipsis ca2-picker-column__item ca2-picker-column__item--selected" style="height: 44px;">北京市</li>
        <li role="button" tabindex="0" class="ca2-ellipsis ca2-picker-column__item" style="height: 44px;">县</li>
      </ul>
    </div>
    <div class="ca2-picker-column">
      <ul class="ca2-picker-column__wrapper" style="transform: translate3d(0, 88px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;">
        <li role="button" tabindex="0" class="ca2-ellipsis ca2-picker-column__item ca2-picker-column__item--selected" style="height: 44px;">东城区</li>
        <li role="button" tabindex="0" class="ca2-ellipsis ca2-picker-column__item" style="height: 44px;">西城区</li>
      </ul>
    </div>
    <div class="ca2-picker__mask" style="background-size: 100% 88px;"></div>
    <div class="ca2-hairline-unset--top-bottom ca2-picker__frame" style="height: 44px;"></div>
  </div>
  <!---->
</div>
`;
